--- a/proftpd.conf
+++ b/proftpd.conf
@@ -1,11 +1,16 @@
 ServerName "tech-cl ftp server"
 DefaultRoot /ftpdata
 User root
-
+PassivePorts %{env:PR_PASSIVE_PORTS}
+RootLogin off
+IdentLookups         off
 <Anonymous ~ftp>
 RequireValidShell off
 MaxClients 10
 <Directory *>
+<Limit READ>
+DenyAll
+</Limit>
 <Limit WRITE>
 DenyAll
 </Limit>
